--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"allowJs": true,
-		"jsx": "react-jsx"
+		"jsx": "react"
 	},
 	"include": [
 		"src"
