--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
         "@types/node": "^12.19.7",
         "@types/react": "^16.14.2",
         "@types/react-dom": "^16.9.10",
+        "autoprefixer": "^10.0.4",
+        "postcss-cli": "^8.3.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
+        "tailwindcss": "^2.0.1",
         "typescript": "^4.1.2",
         "web-vitals": "^0.2.4"
     },
@@ -28,7 +31,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "build:css": "postcss src/styles/tailwind.css -o src/styles/main.css && echo NOTE Remember the prod build: https://tailwindcss.com/docs/installation#building-for-production"
     },
     "eslintConfig": {
         "extends": [
