--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "author": "H36615",
     "private": true,
     "dependencies": {
+        "@headlessui/react": "^0.2.0",
         "@testing-library/jest-dom": "^5.11.6",
         "@testing-library/react": "^11.2.2",
         "@testing-library/user-event": "^12.2.2",
