--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-scripts": "4.0.1",
+        "rxjs": "^6.6.3",
         "tailwindcss": "^2.0.1",
         "typescript": "^4.1.2",
         "web-vitals": "^0.2.4"
