--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "@types/react": "^16.14.2",
         "@types/react-dom": "^16.9.10",
         "autoprefixer": "^10.0.4",
+        "dotenv": "^8.2.0",
         "formik": "^2.2.5",
+        "postcss": "^8.3.8",
         "postcss-cli": "^8.3.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
@@ -31,7 +33,7 @@
         "eslint-plugin-react": "^7.21.5"
     },
     "scripts": {
-        "start": "echo 'If issues w/ tsconfig, check out https://github.com/facebook/create-react-app/issues/10144' && react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
